@@ -1,7 +1,6 @@
 import io.spring.gradle.dependencymanagement.dsl.DependencyManagementExtension
 
 plugins {
-    java
     id("org.springframework.boot") version "3.5.7" apply false
     id("io.spring.dependency-management") version "1.1.7" apply false
 }
@@ -9,7 +8,6 @@ plugins {
 allprojects {
     group = "com.msa"
     version = "0.0.1-SNAPSHOT"
-    description = "cloud"
 
     repositories {
         mavenCentral()
@@ -17,13 +15,13 @@ allprojects {
 }
 
 subprojects {
-    apply(plugin = "java-library")
+    apply(plugin = "java")
     apply(plugin = "org.springframework.boot")
     apply(plugin = "io.spring.dependency-management")
 
-    java {
+    configure<JavaPluginExtension> {
         toolchain {
-            languageVersion = JavaLanguageVersion.of(21)
+            languageVersion.set(JavaLanguageVersion.of(21))
         }
         sourceCompatibility = JavaVersion.VERSION_21
         targetCompatibility = JavaVersion.VERSION_21
@@ -38,16 +36,12 @@ subprojects {
     }
 
     dependencies {
-        implementation("org.springframework.boot:spring-boot-starter")
-        testImplementation("org.springframework.boot:spring-boot-starter-test")
-        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+        "implementation"("org.springframework.boot:spring-boot-starter")
+        "testImplementation"("org.springframework.boot:spring-boot-starter-test")
+        "testRuntimeOnly"("org.junit.platform:junit-platform-launcher")
     }
 
     tasks.withType<Test> {
         useJUnitPlatform()
-    }
-
-    tasks.withType<JavaCompile> {
-        options.compilerArgs.add("--enable-preview")
     }
 }
